--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "dynamoose": "^0.6.0",
     "ejs": "^2.3.1",
     "express": "^4.13.3",
+    "express-session": "^1.14.1",
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-naver": "git://github.com/naver/passport-naver#601b805c77a0cda5e8a4cbf7df2b91fc515fbb59",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
