--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,14 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "1.12.4",
     "html5shiv": "^3.7.3",
-    "respond": "^1.4.2"
+    "respond": "^1.4.2",
+    "bootstrap-drawer": "^1.0.6",
+    "jquery": "^3.1.0",
+    "jquery-legacy": "jquery#1.12.4",
+    "mediaelement": "^2.22.1"
+  },
+  "resolutions": {
+    "jquery": "^3.1.0"
   }
 }
