--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,7 @@
     "respond": "^1.4.2",
     "bootstrap-drawer": "^1.0.6",
     "jquery": "^3.1.0",
-    "jquery-legacy": "jquery#1.12.4",
-    "mediaelement": "^2.22.1"
+    "jquery-legacy": "jquery#1.12.4"
   },
   "resolutions": {
     "jquery": "^3.1.0"
