--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
     "dynamoose": "^0.6.0",
-    "ejs": "^2.3.1",
     "express": "^4.13.3",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.14.1",
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
