--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "install": "bower install"
+    "postinstall": "bower install"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "bower": "^1.7.9",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
     "dynamoose": "^0.6.0",
