--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-ruby-sass": "^2.0.1",
-    "gulp-nodemon": "^2.0.2",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-istanbul": "^1.1.1",
     "gulp-livereload": "^3.8.0",
-    "gulp-plumber": "^1.0.0"
+    "gulp-mocha": "^3.0.1",
+    "gulp-nodemon": "^2.0.2",
+    "gulp-plumber": "^1.0.0",
+    "gulp-ruby-sass": "^2.0.1"
   }
 }
