--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ebstart": "bower install && npm start"
   },
   "dependencies": {
+    "aws-sdk": "^2.6.4",
     "body-parser": "^1.13.3",
     "bower": "^1.7.9",
     "compression": "^1.5.2",
