--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "respond": "^1.4.2",
     "bootstrap-drawer": "^1.0.6",
     "jquery": "^3.1.0",
-    "jquery-legacy": "jquery#1.12.4"
+    "jquery-legacy": "jquery#1.12.4",
+    "bootstrap-validator": "^0.11.5"
   },
   "resolutions": {
     "jquery": "^3.1.0"
